# FaulTrace-RAG

./: .gitignore  CITATION.cff  DRAFT_PAPER.md  INSTALLATION.md  Makefile  README.md  USER_GUIDE.md  docker-compose.yml  export_openapi.py  fix_enums.py  pyproject.toml  requirements.txt
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 44d10cdae2ce_initial_schema.py
apps/api/faulttrace_api/: config.py  database.py  main.py  models.py
apps/api/faulttrace_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/faulttrace_api/routes/: artifacts.py  datasets.py  demo.py  disagreements.py  gold.py  health.py  policies.py  providers.py  queries.py  query_packs.py  runs.py  system.py  worlds.py
apps/api/tests/: test_amazon_adapter.py  test_attribution.py  test_certification.py  test_core_contracts.py  test_generator.py  test_gold_engine.py  test_p4_p5.py  test_pipelines.py  test_query_factory_extended.py  test_reproducibility.py  test_security.py  test_smoke_e2e.py  test_snapshot_registry.py
data/: faulttrace.db
docker/: api.Dockerfile  web.Dockerfile
docs/: ARCHITECTURE.md  ATTRIBUTION_INTERPRETATION.md  BUILD_STATE.md  DECISIONS.md  FAILURE_TAXONOMY.md  KNOWN_LIMITATIONS.md  LOSS_FUNCTIONS.md  openapi.json
paper/: benchmark_schema.md  hypothesis_mapping.md  limitations.md  pipelines.md
reports/: FINAL_HANDOFF.md  benchmark_results.md  prompt-10-completion.md  prompt-2-preflight.md  prompt-3-completion.md  prompt-4-completion.md  prompt-5-completion.md  prompt-6-completion.md
scripts/: benchmark_runs.py
(+105 files in other folders)
